--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,17 +1,20 @@
 # Terminal colors
-#set -g default-terminal "screen-256color"
 # install ncurses-term or tic -x /Applications/tmux-terminfo.src
 set -g default-terminal "tmux-256color"
 
 # Copy to system clipboard
 set -g set-clipboard on
-{{- if eq .chezmoi.os "linux" }}
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -selection clipboard"
-bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "xclip -selection clipboard"
-{{- else }}
-bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
-bind-key -T copy-mode-vi Enter send -X copy-selection-and-cancel
-{{- end }}
+set -ag terminal-features ",xterm-256color:clipboard"
+set -ag terminal-overrides ",xterm*:Ms=\\E]52;%p1%s;%p2%s\\007"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'tmux load-buffer -w -'
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'tmux load-buffer -w -'
+
+# Copy to system clipboard
+set -g set-clipboard on
+set -ag terminal-features ",xterm-256color:clipboard"
+set -ag terminal-overrides ",xterm*:Ms=\\E]52;%p1%s;%p2%s\\007"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'tmux load-buffer -w -'
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'tmux load-buffer -w -'
 
 # use vim style selection and block selection
 unbind-key -T copy-mode-vi 'v'
